--- a/src/infrastructure/jenkins/Jenkinsfile
+++ b/src/infrastructure/jenkins/Jenkinsfile
@@ -9,7 +9,7 @@ pipeline{
         imageName = "961341553126.dkr.ecr.eu-west-3.amazonaws.com/intimacy-repository"
         intimacyRegistry = "https://961341553126.dkr.ecr.eu-west-3.amazonaws.com"
       
-        WT_SECRET= "testsecret"
+        JWT_SECRET = "testsecret"
         JWT_EXPIRATION = "90d"
         DB_TEST_HOST = 'localhost'
         DB_TEST_PORT = "5432"
